[gd_scene load_steps=43 format=3 uid="uid://b00io5ulcln88"]

[ext_resource type="Script" path="res://eagle.gd" id="1_h2urp"]
[ext_resource type="Texture2D" uid="uid://bqseghcm5nr5n" path="res://Shadow.png" id="2_ku41q"]
[ext_resource type="Texture2D" uid="uid://dqcchtp0yun8q" path="res://enemies_16x16.png" id="3_w0b7j"]
[ext_resource type="PackedScene" uid="uid://c0g3p3bxk4bbv" path="res://moonconfused.tscn" id="4_noy73"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5i4b"]
size = Vector2(12, 12)

[sub_resource type="Animation" id="Animation_o7p8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_difa1"]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4nj74"]
resource_name = "down"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t4dib"]
resource_name = "left"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_77365"]
resource_name = "right"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q2awp"]
resource_name = "spawn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"spawn"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_381ss"]
resource_name = "up"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cba3f"]
_data = {
"RESET": SubResource("Animation_o7p8r"),
"die": SubResource("Animation_difa1"),
"down": SubResource("Animation_4nj74"),
"left": SubResource("Animation_t4dib"),
"right": SubResource("Animation_77365"),
"spawn": SubResource("Animation_q2awp"),
"up": SubResource("Animation_381ss")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ie1ma"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uikbe"]
animation = &"spawn"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_245ei"]
animation = &"down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bfuw"]
animation = &"up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a84rd"]
animation = &"right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jb7mk"]
animation = &"left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_wtctx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_245ei")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0bfuw")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_a84rd")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jb7mk")
blend_point_3/pos = Vector2(-1, 0)
snap = Vector2(1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pptb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qemck"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_286q0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2w470"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nu0dl"]
states/die/node = SubResource("AnimationNodeAnimation_ie1ma")
states/die/position = Vector2(559, 96)
states/spawn/node = SubResource("AnimationNodeAnimation_uikbe")
states/spawn/position = Vector2(318, 196)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_wtctx")
states/walk/position = Vector2(421, 118)
transitions = ["walk", "die", SubResource("AnimationNodeStateMachineTransition_5pptb"), "die", "End", SubResource("AnimationNodeStateMachineTransition_qemck"), "Start", "spawn", SubResource("AnimationNodeStateMachineTransition_286q0"), "spawn", "walk", SubResource("AnimationNodeStateMachineTransition_2w470")]

[sub_resource type="AtlasTexture" id="AtlasTexture_21elw"]
atlas = ExtResource("3_w0b7j")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ys5l"]
atlas = ExtResource("3_w0b7j")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfpu4"]
atlas = ExtResource("3_w0b7j")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_73h8s"]
atlas = ExtResource("3_w0b7j")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p404"]
atlas = ExtResource("3_w0b7j")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5al8"]
atlas = ExtResource("3_w0b7j")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyqt1"]
atlas = ExtResource("3_w0b7j")
region = Rect2(64, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f284"]
atlas = ExtResource("3_w0b7j")
region = Rect2(80, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cltxt"]
atlas = ExtResource("3_w0b7j")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_isrte"]
atlas = ExtResource("3_w0b7j")
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl78b"]
atlas = ExtResource("3_w0b7j")
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_45jqd"]
atlas = ExtResource("3_w0b7j")
region = Rect2(48, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjxpc"]
atlas = ExtResource("3_w0b7j")
region = Rect2(64, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l73c8"]
atlas = ExtResource("3_w0b7j")
region = Rect2(96, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3w14"]
atlas = ExtResource("3_w0b7j")
region = Rect2(112, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r7s3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21elw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ys5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfpu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73h8s")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p404")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5al8")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyqt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f284")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cltxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isrte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl78b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45jqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjxpc")
}],
"loop": true,
"name": &"spawn",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l73c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3w14")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x32wa"]
size = Vector2(16, 16)

[node name="eagle" type="CharacterBody2D" groups=["enemy", "mobileEnemy"]]
z_index = 2
y_sort_enabled = true
collision_layer = 48
collision_mask = 16
motion_mode = 1
script = ExtResource("1_h2urp")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
texture = ExtResource("2_ku41q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l5i4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cba3f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_nu0dl")
anim_player = NodePath("../AnimationPlayer")
parameters/walk/blend_position = Vector2(-0.000975609, 0.991189)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_r7s3w")
animation = &"down"
offset = Vector2(0, -5)
flip_h = true

[node name="moonconfused" parent="." instance=ExtResource("4_noy73")]
process_mode = 4
visible = false
z_index = 1
position = Vector2(0, -13)
frame_progress = 0.795646

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_x32wa")

[node name="Timer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 16

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
